<resources>
    <string name="app_name">Komertzialak</string>
    <string name="calendar">Calendar</string>
    <string name="partner">Partner</string>
    <string name="etxea">Etxea</string>
    <string name="eskaera">Eskaerak</string>
    <string name="atzera">Katalogoa</string>
    <string name="hello_blank_fragment">Eskaerak</string>
    <string name="home">Etxea</string>
    <string name="telefonoa">+34 699 69 69 69</string>
    <string name="helbidea">Guarromán, Calle Sevilla 45</string>
    <string name="footer">Kevin todo tuerkas\n</string>
    <string name="hasieraHordua">Hasiera Hordua</string>
    <string name="BukaeraOrdua">Bukaera Hordua</string>
    <string name="BisitaData">Bisita Data</string>
    <string name="Helbidea">Helbidea</string>
    <string name="BisitarenHelburua">Bisitaren Helburua</string>
    <string name="Obserbazioak">Obserbazioak</string>
    <string name="MarkatuEginda">Markatu Eginda</string>
    <string name="Ezabatu">Ezabatu</string>
    <string name="GordeAldaketak">Gorde Aldaketak</string>
    <string name="title_activity_edit_bisita">EditBisitaActivity</string>
    <string name="Berria">Berria</string>
    <string name="Bazkidea">Bazkidea</string>
    <string name="Editatu">Editatu</string>
    <string name="Mota">Mota</string>
    <string name="Email">Email</string>
    <string name="Izena">Izena</string>
    <string name="Telefonoa">Telefonoa</string>
    <string name="Kargatu">Kargatu Datuak</string>
    <string name="Egoera">Egoera</string>
    <string name="Ezkakizuna">Eskakizun data</string>
    <string name="Totala">Totala</string>
    <string name="Konzeptua">Konzeptua</string>
    <string name="Gehitu">Artikuloak Gehitu</string>
    <string name="Entregatuta">Markatu entregatuta</string>
    <string name="kategoria">Kategoria</string>
    <string name="artikuloa">Artikuloa</string>
    <string name="BidaliEskaerak">Bidali eskaerak</string>
    <string name="email">ordezkaritza@levintodotuerkas.com</string>
    <string name="Exportatu">Exportatu</string>
</resources>