<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/etxea"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/naranjaTuerka" />
    <item
        android:id="@+id/nav_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:iconTint="@color/naranjaTuerka" />
    <item
        android:id="@+id/nav_pedido"
        android:title="@string/eskaera"
        android:icon="@drawable/baseline_add_shopping_cart_24"
        android:iconTint="@color/naranjaTuerka" />
    <item
        android:id="@+id/nav_partner"
        android:title="@string/partner"
        android:icon="@drawable/baseline_handshake_24"
        android:iconTint="@color/naranjaTuerka" />
    <item
        android:id="@+id/nav_back"
        android:icon="@drawable/baseline_storage_24"
        android:iconTint="@color/naranjaTuerka"
        android:title="@string/atzera" />
</menu>